test/message/syntactic-tail-call-generator.out
*%(basename)s:13: SyntaxError: Tail call expression is not allowed here
  return continue f();
                  ^^^
SyntaxError: Tail call expression is not allowed here 
